# custom-neural-net

./: CMakeLists.txt  README.md  dropout_model.csv  imgui.ini  model.csv  model_save.csv  model_weights.csv  model_weights2.csv  no_dropout_model.csv  portfile.cmake  vcpkg-configuration.json  vcpkg.json
Training/: abalone_copy.csv  data.csv
src/: main.cpp
src/Data/Config/: run_config.json  train_config.json
src/Data/Network/: weights.csv
src/Model/: Model.cpp  Model.h
src/Model/Components/Layer/: Layer.cpp  Layer.h
src/Model/Components/Layer/Dense/: Dense.cpp  Dense.h
src/Model/Components/Layer/Dropout/: Dropout.cpp  Dropout.h
src/Model/Components/Network/: Network.cpp  Network.h  NetworkUtils.cpp
src/Model/Components/Neuron/: Neuron.cpp  Neuron.h
src/Model/Operations/: Operations.h  create.cpp  run.cpp
src/Model/Utils/: Cost.cpp  CostFunctions.h  ReadCSV.cpp  ReadRawCSV.cpp  Utils.h  computeStatistics.cpp
src/Model/Visualization/: Visualization.cpp  Visualization.h
test/: CMakeLists.txt  main.cpp
